<resources>
    <string name="app_name">EX7</string>
    <string name="set_pretty_name">Set Pretty Name</string>
    <string name="write_your_user_name_here">Write your user name here</string>
    <string name="write_your_pretty_name_here">Write your pretty name here</string>
    <string name="set_your_user_name">set your user name</string>
    <string name="erase_pretty_name">erase pretty name</string>
    <string name="select_your_image_here">Select your image here</string>
</resources>